compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__document_symbols__doc_symbols_type_alias.snap
---
source: compiler-core/src/language_server/tests/document_symbols.rs
expression: "doc_symbols(TestProject::for_source(code))"
---
[
    DocumentSymbol {
        name: "FFF",
        detail: Some(
            "Int",
        ),
        kind: Class,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 1,
                character: 3,
            },
            end: Position {
                line: 2,
                character: 18,
            },
        },
        selection_range: Range {
            start: Position {
                line: 2,
                character: 9,
            },
            end: Position {
                line: 2,
                character: 12,
            },
        },
        children: None,
    },
    DocumentSymbol {
        name: "FFFF",
        detail: Some(
            "List(Int)",
        ),
        kind: Class,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 4,
                character: 0,
            },
            end: Position {
                line: 4,
                character: 25,
            },
        },
        selection_range: Range {
            start: Position {
                line: 4,
                character: 9,
            },
            end: Position {
                line: 4,
                character: 13,
            },
        },
        children: None,
    },
]
