compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__document_symbols__doc_symbols_type_no_constructors.snap
---
source: compiler-core/src/language_server/tests/document_symbols.rs
expression: "doc_symbols(TestProject::for_source(code))"
---
[
    DocumentSymbol {
        name: "A",
        detail: None,
        kind: Class,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 1,
                character: 10,
            },
        },
        selection_range: Range {
            start: Position {
                line: 1,
                character: 9,
            },
            end: Position {
                line: 1,
                character: 10,
            },
        },
        children: None,
    },
]
